Profile show data and can change it

--- a/AMMChat/Info.plist
+++ b/AMMChat/Info.plist
@@ -34,5 +34,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Нам нужно разрешение на использование ваших вотографий</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Нам нужно разрешение на доступ к вашей камере</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
